2005-02-17  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: apparently SUSE's autoconf's AC_SYS_POSIX_TERMIOS
	  macro sets ac_sys_posix_termios rather than am_..., so
	  now the if statement in configure.ac tests both.
	  (reported by Jon Krom)
	
2004-10-05  Nicolas S. Dade  <ndade@nsd.dyndns.org>
  
	* pwsafe: unknown tag/values in v2 files are preserved
	  instead of being stripped. This is probably the right thing
	  to do in the general case.

2004-10-03  Nicolas S. Dade  <ndade@nsd.dyndns.org>
  
	* pwsafe: added testv2.dat and added matching test to
	  ./selftest
	* pwsafe: added --mergedb
	
2004-10-02  Nicolas S. Dade  <ndade@nsd.dyndns.org>
  
	* pwsafe: added -G/--ignore with default value {klipper,
	  xclipboard}
	* pwsafe: added --exportdb
	* pwsafe: added --dbversion and support for pwsafe version 2.0
	  databases
	* pwsafe: now that we have -G/--ignore worked out, pasting
	  the login automatically advances the state. So now you can
	  say pwsafe -up NAME, <paste in login field>, <paste in password
	  field> and you are done. The old methods also still apply.

2004-03-01  Nicolas S. Dade  <ndade@nsd.dyndns.org>
    
        * pwsafe: first try case sensative perfect match.
        * pwsafe: release 0.1.6

2004-02-27  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: you can now end the X selection
          paste pressing any key. You can still, as
          always, end it by selecting something.
        * pwsafe: fixed up build on MacOSX (sysconf(_SC_PAGEZIZE)
          doesn't exist) and freebsd (readline.h declares
          most things correctly, but not the callbacks)

2004-02-25  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: added pwsafe.1.in
        * pwsafe: fixed (harmless) "yes" "yes" output
          from configure.
        * pwsafe: print out character length of suggested
          random password (useful for sites that have
          a length limit)
        * pwsafe: when suggested random password entropy