@@ -2,7 +2,7 @@
 
 
 
-  Copyright (C) 2004 Nicolas S. Dade
+  Copyright (C) 2004-2005 Nicolas S. Dade
 
   pwsafe is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
